--- a/crds/engine.kubevault.com_secretaccessrequests.yaml
+++ b/crds/engine.kubevault.com_secretaccessrequests.yaml
@@ -22,6 +22,9 @@ spec:
     - jsonPath: .status.phase
       name: Status
       type: string
+    - jsonPath: .status.secret.name
+      name: Secret
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
